--- a/Endeavor.Supervisor/Endeavor.Supervisor.csproj
+++ b/Endeavor.Supervisor/Endeavor.Supervisor.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.9.0</Version>
+    <Authors>Keith Heard</Authors>
+    <Product>Endeavor</Product>
+    <Description>Endeavor Supervisor</Description>
+    <Copyright>Copyright 2019</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>Endeavor Workflow Supervisor</PackageTags>
+    <PackageProjectUrl>https://github.com/keryhe/endeavor-supervisor</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
