Updated code based on updates to how tasks are stored

--- a/Endeavor.Supervisor/Endeavor.Supervisor.csproj
+++ b/Endeavor.Supervisor/Endeavor.Supervisor.csproj
@@ -10,6 +10,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Endeavor Workflow Supervisor</PackageTags>
     <PackageProjectUrl>https://github.com/keryhe/endeavor-supervisor</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
