Updated to send messages to worker service

--- a/Endeavor.Supervisor.Service/appsettings.json
+++ b/Endeavor.Supervisor.Service/appsettings.json
@@ -9,7 +9,7 @@
   },
   "RabbitMQPublisher": {
     "Host": "localhost",
-    "Queue": "endeavorQ"
+    "Queue": "EndeavorWorkerQ"
   },
   "SqlServerProvider": {
     "ConnectionString": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Endeavor;Data Source=localhost\\sqlexpress"
